--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-fetch('https://rg-systembasic.onrender.com/api/register')
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,35 +5,38 @@ fetch('https://rg-systembasic.onrender.com/api/register')
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro de Eventos - PWA</title>
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
+  <!-- Bootstrap 5 CSS para estilos (edítalo a tu gusto) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; }
-    #video, #canvas { display: block; margin: 10px auto; }
-    #canvas { display: none; }
-    button { padding: 10px; margin: 5px; }
-    input { margin: 5px; padding: 8px; width: 200px; }
+    body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f8f9fa; }
+    h1 { color: #343a40; }
+    #register, #checkin { margin-bottom: 20px; }
+    input { margin: 5px; }
+    button { margin: 5px; }
+    .qr-img { max-width: 200px; margin: 10px auto; }
   </style>
 </head>
 <body>
   <h1>Registro de Eventos</h1>
-  <div id="register">
+  <div id="register" class="card p-3 mb-4">
     <h2>Pre-registro</h2>
-    <input id="name" placeholder="Nombre" /><br>
-    <input id="email" placeholder="Email" /><br>
-    <button onclick="register()">Registrarse</button>
+    <input id="name" class="form-control mb-2" placeholder="Nombre" />
+    <input id="email" class="form-control mb-2" placeholder="Email" />
+    <button class="btn btn-primary" onclick="register()">Registrarse</button>
   </div>
-  <div id="checkin">
+  <div id="checkin" class="card p-3">
     <h2>Check-in Offline</h2>
-    <button onclick="downloadData()">Descargar Datos</button>
-    <button onclick="startScanner()">Iniciar Escáner</button>
-    <button onclick="syncData()">Sincronizar</button>
-    <video id="video" width="300" height="200"></video>
-    <canvas id="canvas" width="300" height="200"></canvas>
+    <button class="btn btn-secondary" onclick="downloadData()">Descargar Datos</button>
+    <button class="btn btn-secondary" onclick="startScanner()">Iniciar Escáner</button>
+    <button class="btn btn-secondary" onclick="syncData()">Sincronizar</button>
+    <video id="video" class="d-none" width="300" height="200"></video>
+    <canvas id="canvas" class="d-none" width="300" height="200"></canvas>
   </div>
   <script>
     // Registrar Service Worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('sw.js')
         .then(() => console.log('Service Worker registrado'))
         .catch(err => console.error('Error al registrar SW:', err));
     }
@@ -59,7 +61,7 @@ fetch('https://rg-systembasic.onrender.com/api/register')
         return;
       }
       try {
-        const response = await fetch('https://event-system-backend-xne0.onrender.com/api/register', {
+        const response = await fetch('https://event-registration-backend.onrender.com/api/register', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, email })
@@ -68,6 +70,7 @@ fetch('https://rg-systembasic.onrender.com/api/register')
         if (result.qr_code) {
           const img = document.createElement('img');
           img.src = 'data:image/png;base64,' + result.qr_code;
+          img.className = 'qr-img';
           document.body.appendChild(img);
           alert('Registrado! QR generado.');
         } else {
@@ -81,7 +84,7 @@ fetch('https://rg-systembasic.onrender.com/api/register')
 
     // Descargar datos para offline
     async function downloadData() {
-      const response = await fetch('https://event-system-backend-xne0.onrender.com/api/users');
+      const response = await fetch('https://event-registration-backend.onrender.com/api/users');
       const users = await response.json();
       const tx = db.transaction(['users'], 'readwrite');
       const store = tx.objectStore('users');
@@ -97,6 +100,7 @@ fetch('https://rg-systembasic.onrender.com/api/register')
       
       navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
         .then(stream => {
+          video.classList.remove('d-none');
           video.srcObject = stream;
           video.play();
           scanQR();
@@ -135,7 +139,7 @@ fetch('https://rg-systembasic.onrender.com/api/register')
       const request = store.getAll();
       request.onsuccess = async () => {
         const users = request.result.filter(u => u.checked_in);
-        const response = await fetch('https://event-system-backend-xne0.onrender.com/api/sync', {
+        const response = await fetch('https://event-registration-backend.onrender.com/api/sync', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(users)
@@ -145,5 +149,7 @@ fetch('https://rg-systembasic.onrender.com/api/register')
       };
     }
   </script>
+  <!-- Bootstrap 5 JS para interacciones (opcional, edítalo si quieres) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
