--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <title>Registro de Eventos - PWA</title>
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
   <link rel="manifest" href="manifest.json">
-  <!-- Bootstrap 5 CSS para estilos (edítalo a tu gusto) -->
+  <!-- Bootstrap 5 CSS para estilos (edita <style> para personalizar) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f8f9fa; }
@@ -14,7 +14,8 @@
     #register, #checkin { margin-bottom: 20px; }
     input { margin: 5px; }
     button { margin: 5px; }
-    .qr-img { max-width: 200px; margin: 10px auto; }
+    .qr-img { max-width: 200px; margin: 10px auto; border: 2px solid #007bff; border-radius: 8px; }
+    .loading { color: #6c757d; font-style: italic; }
   </style>
 </head>
 <body>
@@ -52,6 +53,27 @@
       db = request.result;
     };
 
+    // Función para reintentar fetch si el backend está dormido
+    async function fetchWithRetry(url, options, retries = 3, delay = 2000) {
+      for (let i = 0; i < retries; i++) {
+        try {
+          const response = await fetch(url, options);
+          const contentType = response.headers.get('content-type');
+          if (contentType && contentType.includes('application/json')) {
+            return response;
+          } else {
+            // Si es HTML (backend dormido), reintenta
+            console.log(`Reintentando... (intento ${i + 1}/${retries})`);
+            await new Promise(resolve => setTimeout(resolve, delay));
+          }
+        } catch (error) {
+          console.error('Error en fetch:', error);
+          await new Promise(resolve => setTimeout(resolve, delay));
+        }
+      }
+      throw new Error('Backend no disponible después de reintentos');
+    }
+
     // Pre-registro
     async function register() {
       const name = document.getElementById('name').value;
@@ -61,11 +83,14 @@
         return;
       }
       try {
-        const response = await fetch('https://event-registration-backend.onrender.com/api/register', {
+        const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/register', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, email })
         });
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
         const result = await response.json();
         if (result.qr_code) {
           const img = document.createElement('img');
@@ -77,19 +102,25 @@
           alert('Error: ' + (result.error || 'Registro falló'));
         }
       } catch (error) {
-        alert('Error de red: ' + error.message);
+        alert('Error de red: ' + error.message + '. Intenta de nuevo en 30s (backend despertando).');
         console.error('Fetch error:', error);
       }
     }
 
     // Descargar datos para offline
     async function downloadData() {
-      const response = await fetch('https://event-registration-backend.onrender.com/api/users');
-      const users = await response.json();
-      const tx = db.transaction(['users'], 'readwrite');
-      const store = tx.objectStore('users');
-      users.forEach(user => store.put(user));
-      alert('Datos descargados para offline');
+      try {
+        const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/users', {
+          method: 'GET'
+        });
+        const users = await response.json();
+        const tx = db.transaction(['users'], 'readwrite');
+        const store = tx.objectStore('users');
+        users.forEach(user => store.put(user));
+        alert('Datos descargados para offline');
+      } catch (error) {
+        alert('Error al descargar datos: ' + error.message);
+      }
     }
 
     // Escanear QR
@@ -139,17 +170,21 @@
       const request = store.getAll();
       request.onsuccess = async () => {
         const users = request.result.filter(u => u.checked_in);
-        const response = await fetch('https://event-registration-backend.onrender.com/api/sync', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(users)
-        });
-        const result = await response.json();
-        alert(result.message);
+        try {
+          const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/sync', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(users)
+          });
+          const result = await response.json();
+          alert(result.message);
+        } catch (error) {
+          alert('Error al sincronizar: ' + error.message);
+        }
       };
     }
   </script>
-  <!-- Bootstrap 5 JS para interacciones (opcional, edítalo si quieres) -->
+  <!-- Bootstrap 5 JS para interacciones -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
