--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,6 @@
   <title>Registro de Eventos - PWA</title>
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
   <link rel="manifest" href="manifest.json">
-  <!-- Bootstrap 5 CSS para estilos (edita <style> para personalizar) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f8f9fa; }
@@ -35,14 +34,12 @@
     <canvas id="canvas" class="d-none" width="300" height="200"></canvas>
   </div>
   <script>
-    // Registrar Service Worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js')
         .then(() => console.log('Service Worker registrado'))
         .catch(err => console.error('Error al registrar SW:', err));
     }
 
-    // Configurar IndexedDB
     let db;
     const request = indexedDB.open('eventDB', 1);
     request.onupgradeneeded = () => {
@@ -53,28 +50,27 @@
       db = request.result;
     };
 
-    // Función para reintentar fetch si el backend está dormido
     async function fetchWithRetry(url, options, retries = 3, delay = 2000) {
       for (let i = 0; i < retries; i++) {
         try {
+          console.log(`Intentando ${url} (intento ${i + 1}/${retries})`);
           const response = await fetch(url, options);
           const contentType = response.headers.get('content-type');
           if (contentType && contentType.includes('application/json')) {
+            console.log(`Respuesta recibida: ${response.status} ${response.statusText}`);
             return response;
           } else {
-            // Si es HTML (backend dormido), reintenta
-            console.log(`Reintentando... (intento ${i + 1}/${retries})`);
+            console.log(`Respuesta no JSON, reintentando... (intento ${i + 1}/${retries})`);
             await new Promise(resolve => setTimeout(resolve, delay));
           }
         } catch (error) {
-          console.error('Error en fetch:', error);
+          console.error(`Error en fetch: ${error.message}`);
           await new Promise(resolve => setTimeout(resolve, delay));
         }
       }
       throw new Error('Backend no disponible después de reintentos');
     }
 
-    // Pre-registro
     async function register() {
       const name = document.getElementById('name').value;
       const email = document.getElementById('email').value;
@@ -84,7 +80,7 @@
       }
       try {
         const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/register', {
-          method: 'POST',
+          method: 'POST', // Aseguramos que sea POST
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, email })
         });
@@ -92,6 +88,7 @@
           throw new Error(`HTTP error! status: ${response.status}`);
         }
         const result = await response.json();
+        console.log('Resultado del registro:', result);
         if (result.qr_code) {
           const img = document.createElement('img');
           img.src = 'data:image/png;base64,' + result.qr_code;
@@ -103,11 +100,10 @@
         }
       } catch (error) {
         alert('Error de red: ' + error.message + '. Intenta de nuevo en 30s (backend despertando).');
-        console.error('Fetch error:', error);
+        console.error('Error detallado:', error);
       }
     }
 
-    // Descargar datos para offline
     async function downloadData() {
       try {
         const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/users', {
@@ -123,7 +119,6 @@
       }
     }
 
-    // Escanear QR
     function startScanner() {
       const video = document.getElementById('video');
       const canvas = document.getElementById('canvas');
@@ -163,28 +158,9 @@
       }
     }
 
-    // Sincronizar datos
     async function syncData() {
       const tx = db.transaction(['users'], 'readonly');
       const store = tx.objectStore('users');
       const request = store.getAll();
       request.onsuccess = async () => {
-        const users = request.result.filter(u => u.checked_in);
-        try {
-          const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/sync', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(users)
-          });
-          const result = await response.json();
-          alert(result.message);
-        } catch (error) {
-          alert('Error al sincronizar: ' + error.message);
-        }
-      };
-    }
-  </script>
-  <!-- Bootstrap 5 JS para interacciones -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+        const users = request.result.filter(u => u.checked
