--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,11 +53,11 @@
     async function fetchWithRetry(url, options, retries = 3, delay = 2000) {
       for (let i = 0; i < retries; i++) {
         try {
-          console.log(`Intentando ${url} (intento ${i + 1}/${retries})`);
+          console.log(`Intentando ${url} con método ${options.method} (intento ${i + 1}/${retries})`);
           const response = await fetch(url, options);
+          console.log(`Respuesta: ${response.status} ${response.statusText}`);
           const contentType = response.headers.get('content-type');
           if (contentType && contentType.includes('application/json')) {
-            console.log(`Respuesta recibida: ${response.status} ${response.statusText}`);
             return response;
           } else {
             console.log(`Respuesta no JSON, reintentando... (intento ${i + 1}/${retries})`);
@@ -79,8 +79,8 @@
         return;
       }
       try {
-        const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/register', {
-          method: 'POST', // Aseguramos que sea POST
+        const response = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/register', {
+          method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ name, email })
         });
@@ -106,7 +106,7 @@
 
     async function downloadData() {
       try {
-        const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/users', {
+        const response = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/users', {
           method: 'GET'
         });
         const users = await response.json();
@@ -163,4 +163,21 @@
       const store = tx.objectStore('users');
       const request = store.getAll();
       request.onsuccess = async () => {
-        const users = request.result.filter(u => u.checked
+        const users = request.result.filter(u => u.checked_in);
+        try {
+          const response = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/sync', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(users)
+          });
+          const result = await response.json();
+          alert(result.message);
+        } catch (error) {
+          alert('Error al sincronizar: ' + error.message);
+        }
+      };
+    }
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
