--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,34 +6,101 @@
   <title>Registro de Eventos - PWA</title>
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
   <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="/icon.png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f8f9fa; }
     h1 { color: #343a40; }
-    #register, #checkin { margin-bottom: 20px; }
-    input { margin: 5px; }
+    #register, #checkin, #adminDashboard { margin-bottom: 20px; max-width: 400px; margin: 0 auto; display: none; }
+    #adminDashboard { max-width: 600px; }
+    input, select { margin: 5px; }
     button { margin: 5px; }
     .qr-img { max-width: 200px; margin: 10px auto; border: 2px solid #007bff; border-radius: 8px; }
+    .banner { width: 100%; height: auto; }
+    #video, #canvas { display: none; margin: 10px auto; }
+    .checkin-status { color: #28a745; font-weight: bold; }
     .loading { color: #6c757d; font-style: italic; }
+    table { width: 100%; margin: 10px 0; }
+    th, td { padding: 8px; border: 1px solid #dee2e6; }
+    @media (min-width: 768px) { .banner { width: 50%; } }
   </style>
 </head>
 <body>
-  <h1>Registro de Eventos</h1>
+  <h1>Registro de Eventos <img src="/icon.png" alt="Logo" style="width: 50px; height: 50px;"></h1>
+  <img src="https://via.placeholder.com/600x200" alt="Banner del Evento" class="banner">
+
+  <!-- Pantalla para Usuarios (Asistentes) -->
   <div id="register" class="card p-3 mb-4">
     <h2>Pre-registro</h2>
-    <input id="name" class="form-control mb-2" placeholder="Nombre" />
-    <input id="email" class="form-control mb-2" placeholder="Email" />
+    <input id="name" class="form-control mb-2" placeholder="Nombre" required />
+    <input id="email" class="form-control mb-2" placeholder="Email" type="email" required />
+    <input id="company" class="form-control mb-2" placeholder="Empresa" />
+    <input id="position" class="form-control mb-2" placeholder="Puesto" />
+    <select id="passType" class="form-control mb-2">
+      <option value="free">Gratis</option>
+      <option value="paid">Pago</option>
+    </select>
+    <input id="interests" class="form-control mb-2" placeholder="Intereses" />
     <button class="btn btn-primary" onclick="register()">Registrarse</button>
+    <p class="loading" id="registerMessage"></p>
   </div>
+  <div id="qrContainer" style="display: none;">
+    <img id="qrImage" class="qr-img" alt="QR Code">
+    <button class="btn btn-secondary" onclick="downloadQR()">Descargar QR</button>
+  </div>
+
   <div id="checkin" class="card p-3">
     <h2>Check-in Offline</h2>
+    <video id="video" width="300" height="200"></video>
+    <canvas id="canvas" width="300" height="200"></canvas>
+    <p id="scanMessage">Escanea tu QR</p>
+    <p id="checkinStatus" class="checkin-status" style="display: none;"></p>
     <button class="btn btn-secondary" onclick="downloadData()">Descargar Datos</button>
     <button class="btn btn-secondary" onclick="startScanner()">Iniciar Escáner</button>
     <button class="btn btn-secondary" onclick="syncData()">Sincronizar</button>
-    <video id="video" class="d-none" width="300" height="200"></video>
-    <canvas id="canvas" class="d-none" width="300" height="200"></canvas>
   </div>
+
+  <!-- Pantalla para Administradores (Dashboard) -->
+  <div id="adminDashboard" class="card p-3">
+    <h2>Panel de Administración</h2>
+    <div class="banner" style="background-color: #e9ecef; padding: 10px;">
+      <h3>Estadísticas</h3>
+      <p>Total Asistentes: <span id="totalAttendees">0</span></p>
+      <p>Última hora: <span id="hourAttendees">0</span></p>
+      <!-- Placeholder para gráfico -->
+      <div id="attendanceChart" style="height: 200px;"></div>
+    </div>
+    <h3>Gestión de Usuarios</h3>
+    <select id="filterPassType" class="form-control mb-2" onchange="filterUsers()">
+      <option value="all">Todos</option>
+      <option value="free">Gratis</option>
+      <option value="paid">Pago</option>
+    </select>
+    <table id="usersTable">
+      <thead>
+        <tr><th>Nombre</th><th>Email</th><th>Check-in</th></tr>
+      </thead>
+      <tbody id="usersTableBody"></tbody>
+    </table>
+    <button class="btn btn-primary" onclick="exportToExcel()">Exportar a Excel</button>
+    <button class="btn btn-secondary" onclick="syncData()">Sincronizar Datos</button>
+  </div>
+
   <script>
+    // Detectar rol desde la URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const role = urlParams.get('role');
+    if (role === 'admin') {
+      document.getElementById('adminDashboard').style.display = 'block';
+      document.getElementById('register').style.display = 'none';
+      document.getElementById('checkin').style.display = 'none';
+      loadDashboard();
+    } else {
+      document.getElementById('register').style.display = 'block';
+      document.getElementById('checkin').style.display = 'block';
+      document.getElementById('adminDashboard').style.display = 'none';
+    }
+
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js')
         .then(() => console.log('Service Worker registrado'))
@@ -48,6 +115,7 @@
     };
     request.onsuccess = () => {
       db = request.result;
+      if (role === 'admin') loadUsers();
     };
 
     async function fetchWithRetry(url, options, retries = 3, delay = 2000) {
@@ -74,15 +142,19 @@
     async function register() {
       const name = document.getElementById('name').value;
       const email = document.getElementById('email').value;
+      const company = document.getElementById('company').value;
+      const position = document.getElementById('position').value;
+      const passType = document.getElementById('passType').value;
+      const interests = document.getElementById('interests').value;
       if (!name || !email) {
         alert('Por favor, ingresa nombre y email.');
         return;
       }
       try {
-        const response = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/register', {
+        const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/register', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name, email })
+          body: JSON.stringify({ name, email, company, position, passType, interests })
         });
         if (!response.ok) {
           throw new Error(`HTTP error! status: ${response.status}`);
@@ -90,11 +162,11 @@
         const result = await response.json();
         console.log('Resultado del registro:', result);
         if (result.qr_code) {
-          const img = document.createElement('img');
-          img.src = 'data:image/png;base64,' + result.qr_code;
-          img.className = 'qr-img';
-          document.body.appendChild(img);
+          const qrImage = document.getElementById('qrImage');
+          qrImage.src = 'data:image/png;base64,' + result.qr_code;
+          document.getElementById('qrContainer').style.display = 'block';
           alert('Registrado! QR generado.');
+          if (role === 'admin') loadUsers();
         } else {
           alert('Error: ' + (result.error || 'Registro falló'));
         }
@@ -104,16 +176,26 @@
       }
     }
 
+    function downloadQR() {
+      const qrImage = document.getElementById('qrImage');
+      const link = document.createElement('a');
+      link.href = qrImage.src;
+      link.download = 'qr-code.png';
+      link.click();
+    }
+
     async function downloadData() {
       try {
-        const response = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/users', {
+        const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/users', {
           method: 'GET'
         });
         const users = await response.json();
         const tx = db.transaction(['users'], 'readwrite');
         const store = tx.objectStore('users');
         users.forEach(user => store.put(user));
+        updateStats();
         alert('Datos descargados para offline');
+        if (role === 'admin') loadUsers();
       } catch (error) {
         alert('Error al descargar datos: ' + error.message);
       }
@@ -123,10 +205,12 @@
       const video = document.getElementById('video');
       const canvas = document.getElementById('canvas');
       const ctx = canvas.getContext('2d');
-      
+      video.style.display = 'block';
+      canvas.style.display = 'block';
+      document.getElementById('scanMessage').textContent = 'Escanea tu QR';
+
       navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
         .then(stream => {
-          video.classList.remove('d-none');
           video.srcObject = stream;
           video.play();
           scanQR();
@@ -147,7 +231,10 @@
               if (user && !user.checked_in) {
                 user.checked_in = true;
                 store.put(user);
-                alert('Check-in confirmado: ' + user.name);
+                document.getElementById('checkinStatus').textContent = `Check-in confirmado: ${user.name}`;
+                document.getElementById('checkinStatus').style.display = 'block';
+                updateStats();
+                if (role === 'admin') loadUsers();
               } else {
                 alert('Usuario inválido o ya registrado');
               }
@@ -165,16 +252,85 @@
       request.onsuccess = async () => {
         const users = request.result.filter(u => u.checked_in);
         try {
-          const response = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/sync', {
+          const response = await fetchWithRetry('https://event-registration-backend.onrender.com/api/sync', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(users)
           });
           const result = await response.json();
           alert(result.message);
+          updateStats();
+          if (role === 'admin') loadUsers();
         } catch (error) {
           alert('Error al sincronizar: ' + error.message);
         }
+      };
+    }
+
+    function updateStats() {
+      const tx = db.transaction(['users'], 'readonly');
+      const store = tx.objectStore('users');
+      const request = store.getAll();
+      request.onsuccess = () => {
+        const users = request.result;
+        document.getElementById('totalAttendees').textContent = users.length;
+        const hourAttendees = users.filter(u => u.checked_in).length;
+        document.getElementById('hourAttendees').textContent = hourAttendees;
+        if (role === 'admin') {
+          // Simulación de gráfico (puedes añadir Chart.js aquí)
+          document.getElementById('attendanceChart').innerHTML = `<p>Gráfico simulado (añade Chart.js)</p>`;
+        }
+      };
+    }
+
+    function loadUsers() {
+      const tx = db.transaction(['users'], 'readonly');
+      const store = tx.objectStore('users');
+      const request = store.getAll();
+      request.onsuccess = () => {
+        const users = request.result;
+        const tbody = document.getElementById('usersTableBody');
+        tbody.innerHTML = '';
+        users.forEach(user => {
+          const row = document.createElement('tr');
+          row.innerHTML = `<td>${user.name}</td><td>${user.email}</td><td>${user.checked_in ? 'Sí' : 'No'}</td>`;
+          tbody.appendChild(row);
+        });
+      };
+    }
+
+    function filterUsers() {
+      const filter = document.getElementById('filterPassType').value;
+      const tx = db.transaction(['users'], 'readonly');
+      const store = tx.objectStore('users');
+      const request = store.getAll();
+      request.onsuccess = () => {
+        const users = request.result;
+        const tbody = document.getElementById('usersTableBody');
+        tbody.innerHTML = '';
+        users.filter(user => filter === 'all' || user.passType === filter).forEach(user => {
+          const row = document.createElement('tr');
+          row.innerHTML = `<td>${user.name}</td><td>${user.email}</td><td>${user.checked_in ? 'Sí' : 'No'}</td>`;
+          tbody.appendChild(row);
+        });
+      };
+    }
+
+    function exportToExcel() {
+      const tx = db.transaction(['users'], 'readonly');
+      const store = tx.objectStore('users');
+      const request = store.getAll();
+      request.onsuccess = () => {
+        const users = request.result;
+        let csv = 'Nombre,Email,Check-in\n';
+        users.forEach(user => {
+          csv += `${user.name},${user.email},${user.checked_in}\n`;
+        });
+        const blob = new Blob([csv], { type: 'text/csv' });
+        const link = document.createElement('a');
+        link.href = URL.createObjectURL(blob);
+        link.download = 'users.csv';
+        link.click();
       };
     }
   </script>
