--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <h1>Registro de Eventos <img src="/icon.png" alt="Logo" style="width: 50px; height: 50px; vertical-align: middle;"></h1>
-  <img src="https://via.placeholder.com/600x200" alt="Banner del Evento" class="banner">
+  <img src="https://placehold.co/600x200" alt="Banner del Evento" class="banner">
 
   <div id="register" class="card">
     <h2>Pre-registro</h2>
